--- a/dev/sass/_touch.scss
+++ b/dev/sass/_touch.scss
@@ -6,85 +6,44 @@
 	font-family: "helvetica";
 	z-index: 99999;
 	
-	div{
-		position: absolute;
-		display: block;
-		width: 50px; height: 50px;
-		background: rgba(255,255,255, 0.1);
-		border: 1px solid rgba(0,0,0, 0.1);
-		text-align: center;
-		font-weight: bold;
-		color: rgba(0,0,0, 0.1);
-		-webkit-text-stroke: 1px rgba(0,0,0, 0.1);
-		@include border-radius(10px);
-		
+	#dPad{
+    $padSize: 140px;
+  	  
+	  position: absolute;
+	  top: 20px; right: 20px;
+	  width: $padSize; height: $padSize;
+	  display: block;
+    border: 1px solid rgba(0,0,0, 0.1);
+    background: rgba(0,0,0, 0.05);
+    @include border-radius($padSize/2);
+    @include box-shadow(inset 0px 0px 15px rgba(255,255,255,0.05));
+	
+  	div{
+  	  $size: 70px;
+  	
+  		position: absolute;
+  		left: 50%; top: 50%;
+  		margin-top: -$size/2;
+  		margin-left: -$size/2;
+  		display: block;
+  		width: $size; height: $size;
+  		background: rgba(255,255,255, 0.1);
+  		border: 1px solid rgba(0,0,0, 0.1);
+  		text-align: center;
+  		font-weight: bold;
+  		color: rgba(0,0,0, 0.1);
+      -webkit-transition: -webkit-transform 0.15s ease-out;
+  		-webkit-text-stroke: 1px rgba(0,0,0, 0.1);
+  		@include box-shadow(0px 0px 10px rgba(0,0,0,0.1));
+  		@include border-radius($size/2);
+  	}
+  		
 		&.active{
+		 div{
+      -webkit-transition: -webkit-transform 0s ease-out;
 			background: rgba(255,255,255, 0.3);
 			color: rgba(0,0,0, 0.4);
 		}
-		
-		&#up{
-			left: 80px; bottom:134px;
-			height: 60px;
 		}
-		&#right{
-			left: 130px; bottom:82px;
-			width: 60px;
-		}
-		&#down{
-			left: 80px; bottom:20px;
-			height: 60px;
-		}
-		&#left{
-			left: 20px; bottom:82px;
-			width: 60px;
-		}
-		
-		&#aButton{
-			right: 20px; bottom:80px;
-			width: 65px; height: 65px;
-			line-height: 65px;
-			font-size: 30px;
-			@include border-radius(35px);
-		}
-		&#bButton{
-			right: 80px; bottom:20px;
-			width: 65px; height: 65px;
-			line-height: 65px;
-			font-size: 30px;
-			@include border-radius(35px);
-		}
-		
-		&#start{
-			bottom:0px; left: 50%;
-			width: 80px; height: 30px;
-			font-size: 18px;
-			line-height: 34px;
-			margin-left: 5px;
-			@include border-radius(10px 10px 0px 0px);
-		}
-		&#select{
-			bottom:0px; left: 50%;
-			width: 80px; height: 30px;
-			font-size: 18px;
-			line-height: 34px;
-			margin-left: -85px;
-			@include border-radius(10px 10px 0px 0px);
-		}
-		
-		&#L{
-			left: 0px; top:0px;
-			width: 80px; height: 44px;
-			font-size: 18px;
-			line-height: 44px;
-			@include border-radius(0px 0px 10px 0px);
-		}
-		&#R{
-			right: 0px; top:0px;
-			width: 80px; height: 44px;
-			font-size: 18px;
-			line-height: 44px;
-			@include border-radius(0px 0px 0px 10px);
-		}	
 	}
 }
