--- a/dev/sass/_touch.scss
+++ b/dev/sass/_touch.scss
@@ -7,10 +7,10 @@
 	z-index: 99999;
 	
 	#dPad{
-    $padSize: 140px;
+    $padSize: 160px;
   	  
 	  position: absolute;
-	  top: 20px; right: 20px;
+	  left: 20px; bottom: 20px;
 	  width: $padSize; height: $padSize;
 	  display: block;
     border: 1px solid rgba(0,0,0, 0.1);
@@ -19,7 +19,7 @@
     @include box-shadow(inset 0px 0px 15px rgba(255,255,255,0.05));
 	
   	div{
-  	  $size: 70px;
+  	  $size: 80px;
   	
   		position: absolute;
   		left: 50%; top: 50%;
@@ -39,11 +39,11 @@
   	}
   		
 		&.active{
-		 div{
-      -webkit-transition: -webkit-transform 0s ease-out;
-			background: rgba(255,255,255, 0.3);
-			color: rgba(0,0,0, 0.4);
-		}
+		  div{
+        -webkit-transition: -webkit-transform 0s ease-out;
+  			background: rgba(255,255,255, 0.3);
+  			color: rgba(0,0,0, 0.4);
+      }
 		}
 	}
 }
