--- a/dev/sass/game.scss
+++ b/dev/sass/game.scss
@@ -8,14 +8,24 @@ body{
   background: #222;
   font-family: "helvetica neue";
   color: #FFF;
+  overflow: hidden;
+}
+
+#map {
+  position: absolute;
+  left: 50%; top: 50%;
+  display: block;
+  width: 520px; height: 640px;
+  background: url(img/LVL-1-mini-map.png);
+  @include transform(translate(-50%, -50%));
 }
 
 #charachter{
   position: absolute;
-  left: 50%; top: 50%;
+  left: 0px; top: 0px;
   display: block;
   width: 20px; height: 20px;
   background: #FFF;
-  margin: -10px 0 -10px 0;
+  margin: -10px 0 0 -10px;
   @include border-radius(10px);
 }
