--- a/dev/sass/game.scss
+++ b/dev/sass/game.scss
@@ -1,8 +1,14 @@
 @import "compass/reset";
 @import "compass/css3";
+@import "objects";
 
 @import "dev";
 @import "touch";
+
+body, 
+html {
+  width: 100%; height: 100%;
+}
 
 body{
   background: #222;
@@ -11,16 +17,31 @@ body{
   overflow: hidden;
 }
 
-#map {
-  position: absolute;
-  left: 50%; top: 50%;
+.mask{
   display: block;
-  width: 520px; height: 640px;
-  background: url(img/LVL-1-mini-map.png);
-  @include transform(translate(-50%, -50%));
+  width: 100%; height: 100%;
+  
+  @include perspective(800px);
 }
 
-#charachter{
+.camera{
+  display: block;
+  position: absolute;
+  left: 50%; top:50%;
+
+  @include transform-style(preserve-3d);
+  @include transform(rotateX(45deg) rotateZ(10deg) translate(-50%, -50%));
+}
+
+.map {
+  display: block;
+  width: 520px; height: 640px;
+  background: url(img/LVL-1-mini-map.png);// rgba(255,255,255, 0.7);
+  
+  @include transform-style(preserve-3d);
+}
+
+.charachter{
   position: absolute;
   left: 0px; top: 0px;
   display: block;
@@ -29,3 +50,56 @@ body{
   margin: -10px 0 0 -10px;
   @include border-radius(10px);
 }
+
+#box_1{
+  $width: 80px; $height: 100px; $depth: 340px;
+  $x: 20px; $y: 20px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+#box_2{
+  $width: 80px; $height: 100px; $depth: 80px;
+  $x: 20px; $y: 540px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+#box_3{
+  $width: 80px; $height: 100px; $depth: 520px;
+  $x: 420px;  $y: 100px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+#box_4{
+  $width: 80px; $height: 100px; $depth: 160px;
+  $x: 200px; $y: 20px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+#box_5{
+  $width: 80px; $height: 100px; $depth: 80px;
+  $x: 100px; $y: 280px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+#box_6{
+  $width: 80px; $height: 100px; $depth: 80px;
+  $x: 180px; $y: 280px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+#box_7{
+  $width: 80px; $height: 100px; $depth: 80px;
+  $x: 260px; $y: 280px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+#box_8{
+  $width: 80px; $height: 100px; $depth: 80px;
+  $x: 340px; $y: 280px; $z: 0px;
+  @include box($width,$height,$depth,$x,$y,$z);
+}
+
+
+
+
+
