--- a/dev/sass/_touch.scss
+++ b/dev/sass/_touch.scss
@@ -1,6 +1,6 @@
 .controls{
 	position: absolute;
-	left: 0px; left: 0px;
+	left: 0px; top: 0px;
 	display: block;
 	width: 100%; height: 100%;
 	font-family: "helvetica";
