--- a/dev/sass/game.scss
+++ b/dev/sass/game.scss
@@ -18,11 +18,27 @@ body{
 }
 
 .mask{
+  position: relative;
+  z-index: 1;
   display: block;
   width: 100%; height: 100%;
   
+  @include transform(scale(1));
   @include perspective(800px);
 }
+
+@media screen and (device-aspect-ratio: 40/71) {
+  .mask{
+    @include transform(scale(0.4));
+  }
+}
+
+@media screen and (device-aspect-ratio: 3/4) {
+  .mask{
+    @include transform(scale(0.8));
+  }
+}
+
 
 .camera{
   display: block;
@@ -30,14 +46,15 @@ body{
   left: 50%; top:50%;
 
   @include transform-style(preserve-3d);
-  @include transform(rotateX(45deg) rotateZ(10deg) translate(-50%, -50%));
+  @include transform(rotateX(45deg));
 }
 
 .map {
   display: block;
   width: 520px; height: 640px;
-  background: url(img/LVL-1-mini-map.png);// rgba(255,255,255, 0.7);
+  //background: url(img/LVL-1-mini-map.png);
   
+  @include transform(translate3D(-260px, -320px, 240px) rotateZ(45deg));
   @include transform-style(preserve-3d);
 }
 
@@ -51,52 +68,98 @@ body{
   @include border-radius(10px);
 }
 
+span{
+  display: none;
+}
+
 #box_1{
-  $width: 80px; $height: 100px; $depth: 340px;
-  $x: 20px; $y: 20px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $width: 80px; $height: 200px; $depth: 340px;
+  $x: 20px; $y: 20px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
 }
 
 #box_2{
-  $width: 80px; $height: 100px; $depth: 80px;
-  $x: 20px; $y: 540px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $width: 80px; $height: 142px; $depth: 80px;
+  $x: 20px; $y: 540px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
 }
 
 #box_3{
   $width: 80px; $height: 100px; $depth: 520px;
-  $x: 420px;  $y: 100px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $x: 420px;  $y: 100px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
 }
 
 #box_4{
-  $width: 80px; $height: 100px; $depth: 160px;
-  $x: 200px; $y: 20px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $width: 80px; $height: 123px; $depth: 160px;
+  $x: 200px; $y: 20px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
 }
 
 #box_5{
-  $width: 80px; $height: 100px; $depth: 80px;
-  $x: 100px; $y: 280px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $width: 80px; $height: 173px; $depth: 80px;
+  $x: 100px; $y: 280px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
 }
 
 #box_6{
-  $width: 80px; $height: 100px; $depth: 80px;
-  $x: 180px; $y: 280px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $width: 80px; $height: 151px; $depth: 80px;
+  $x: 180px; $y: 280px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
 }
 
 #box_7{
-  $width: 80px; $height: 100px; $depth: 80px;
-  $x: 260px; $y: 280px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $width: 80px; $height: 133px; $depth: 80px;
+  $x: 260px; $y: 280px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
 }
 
 #box_8{
-  $width: 80px; $height: 100px; $depth: 80px;
-  $x: 340px; $y: 280px; $z: 0px;
-  @include box($width,$height,$depth,$x,$y,$z);
+  $width: 80px; $height: 116px; $depth: 80px;
+  $x: 340px; $y: 280px; $z: -100px;
+  $rx: 0deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
+}
+
+#box_9{
+  $width: 131px; $height: 20px; $depth: 80px;
+  $x: 73px; $y: 20px; $z: 44px;
+  $rx: 0deg; $ry: 37deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
+}
+
+#box_10{
+  $width: 144px; $height: 20px; $depth: 80px;
+  $x: 275px; $y: 100px; $z: -8px;
+  $rx: 0deg; $ry: 9.33deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
+}
+
+#box_11{
+  $width: 80px; $height: 20px; $depth: 190px;
+  $x: 20px; $y: 350px; $z: 53px;
+  $rx: -17.86deg; $ry: 0deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
+}
+
+#box_12{
+  $width: 325px; $height: 20px; $depth: 80px;
+  $x: 96px; $y: 540px; $z: 1px;
+  $rx: 0deg; $ry: 7.5deg; $rz: 0deg;
+  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
+}
+
+body .platform{
+  li:nth-child(2){
+    background: rgba(255,255,255,0.9) !important;
+  }
 }
 
 
