--- a/dev/sass/_objects.scss
+++ b/dev/sass/_objects.scss
@@ -12,44 +12,46 @@
     position: absolute;
     left: 0px; top: 0px;
     display: block;
-    background: rgba(0,0,0,0.3);
+    background: #000;
     text-align: center;
-    opacity: 0.8;
+    opacity: 1;
     box-sizing: border-box;
-    border: 1px solid #000;
+    border: 1px solid #FFF;
     
     @include backface-visibility(hidden);
     
     &:nth-child(1){
-      @include transform( translate3D(0,0,0) rotateY(-180deg) );
-      width: $width; height: $depth;
+      @include transform( translate3D(0,-$height,$depth));
+      width: $width; height: $height;
+      background: lighten(#000, 30);
     }
     &:nth-child(2){
-      @include transform( translate3D(0,0,$height) );
-      width: $width; height: $depth;
+      @include transform( translate3D(0,-$height,0) rotateY(180deg));
+      width: $width; height: $height;
     }
     &:nth-child(3){
-      @include transform( translate3D(0,-$height/2,$height/2) rotateX(-90deg) rotateY(180deg) );
-      width: $width; height: $height;
+      @include transform( translate3D(-$depth/2,-$height,$depth/2) rotateY(-90deg) );
+      width: $depth; height: $height;
     }
     &:nth-child(4){
-      @include transform( translate3D(0,($depth)-($height/2),$height/2) rotateX(-90deg) );
-      width: $width; height: $height;
+      @include transform( translate3D(-$depth/2+$width,-$height,$depth/2) rotateY(90deg) );
+      width: $depth; height: $height;
+      background: lighten(#000, 15);
     }
     &:nth-child(5){
-      @include transform( translate3D(-$depth/2,$depth/2-$height/2,$height/2) rotateY(-90deg) rotateZ(90deg) );
-      width: $depth; height: $height;
+      @include transform( translate3D(0,-$depth/2-$height,$depth/2) rotateX(90deg));
+      width: $width; height: $depth;
     }
     &:nth-child(6){
-      @include transform( translate3D(-$depth/2+$width,$depth/2-$height/2,$height/2) rotateX(-90deg) rotateY(90deg) );
-      width: $depth; height: $height;
+      @include transform( translate3D(0,-$depth/2,$depth/2) rotateX(-90deg));
+      width: $width; height: $depth;
     }   
     
     span{
       font-family: "helvetica";
       font-size: 20px;
       font-weight: bold;
-      color: rgba(255,255,255, 0.5);
+      color: rgba(100,100,100, 1);
     }
   }
   
