--- a/dev/sass/_touch.scss
+++ b/dev/sass/_touch.scss
@@ -46,4 +46,28 @@
       }
 		}
 	}
+	
+	a {
+	  display: block;
+	  background: rgba(255,255,255, 0.1);
+    border: 1px solid rgba(0,0,0, 0.1);
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    color: rgba(0,0,0, 0.1);
+    -webkit-text-stroke: 1px rgba(0,0,0, 0.1);
+    
+    &.active{
+  		background: rgba(255,255,255, 0.3);
+  		color: rgba(0,0,0, 0.4);
+		}
+		
+		&#actionButton{
+		  position: absolute;
+		  right: 60px; bottom: 60px;
+  		width: 80px; height: 80px;
+  		line-height: 80px;
+  		@include border-radius(40px);
+		}
+	}
 }
