--- a/dev/sass/game.scss
+++ b/dev/sass/game.scss
@@ -53,7 +53,7 @@ body{
   width: 0px; height: 0px;
 
   @include g-transform-style(preserve-3d);
-  @include g-transform(translateY(0px) rotateX(-45deg) rotateY(-45deg));
+  //@include g-transform(rotateX(-45deg) rotateY(-45deg));
 }
 
 .map {
